# Rclone-Explorer

./: .gitignore  DESIGN_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  UI_CHANGES.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
docs/: ICONS_DESIGN.md  PROJECT_STRUCTURE.md  RUN_INSTRUCTIONS.txt  TITLE_BAR_UPDATE.md  WINDOW_CONTROLS_DESIGN.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  rclone.rs
src/lib/api/: rcClient.ts
src/lib/components/: DualPanel.svelte  FileList.svelte  FilePanel.svelte  KeyboardHelper.svelte  RegisterAccountModal.svelte  StatusBar.svelte  TabBar.svelte  TopNavTabs.svelte  WindowControls.svelte
src/lib/components/pages/: AccountsPage.svelte  ExplorerPage.svelte  HelpPage.svelte  OptionsPage.svelte  TasksPage.svelte
src/lib/stores/: accounts.ts  index.ts  jobs.ts  keyboard.ts  navigation.ts  tabs.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte
