[package]
name = "rclone_explorer"
version = "0.1.0"
edition = "2021"

[lib]
name = "rclone_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rclone_explorer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1"
chrono = "0.4"
zip = "0.6"
dirs = "5.0"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase", "errhandlingapi", "winnt"] }
